<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".controller.MainActivity"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="#985858"
            android:textSize="35dp"
            android:textStyle="bold"
            android:typeface="normal"
            android:verticalScrollbarPosition="left"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/app_in_name_after"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@id/btnSignGuest"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <Button


            android:id="@+id/btnSignIn"

            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginVertical="7dp"
            android:layout_weight="1"


            android:backgroundTint="#858383"

            android:backgroundTintMode="add"
            android:text="@string/btnSignIn"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:iconTint="#000000"
            app:iconTintMode="add" />

        <Button
            android:id="@+id/btnRegister"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="7dp"

            android:layout_weight="1"

            android:backgroundTint="#858383"
            android:text="@string/btnRegister"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignGuest"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="#59858383"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="7dp"
        android:layout_weight="1"
        android:shadowColor="@android:color/background_dark"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/btnSignGuest"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />



</RelativeLayout>